# Group12

./: CMakeLists.txt  README.md
Laptop/: compile_flags.txt  laptop_send.cpp
include/: ctrl_eqip.h
lib/: ctrl_eqip.dll.lib
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/modules/: ctrl_eqip_parser.cpp  ctrl_eqip_parser.h  fan_speed.cpp  fan_speed.h  oled_display.cpp  oled_display.h  servo_track.cpp  servo_track.h  wifi_manager.cpp  wifi_manager.h
